Добавлены исправления от 26.06 по задаче Lambdas